# Spotify-Analysis

./: .env.example  .gitignore  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PROJECT_FRAMEWORK.md  README.md  comprehensive_playlist_analysis.py  interactive_temporal_dashboard.py  interactive_temporal_dashboard_fixed.py  phase3_deep_analysis.py  phase4_demo.py  phase4_integration_test.py  process_spotify_data.py  pyproject.toml  pytest.ini  requirements.txt  research_workflow_example.py  restructure_data_for_validation.py  setup.py  simple_data_analysis.py  temporal_music_analysis.py  validate_research_claims.py
config/: model_config.yaml
notebooks/: 01_integrated_music_analysis.ipynb
src/: __init__.py
src/analysis/: __init__.py  preference_evolution.py
src/data_processing/: __init__.py  cultural_categorizer.py  extended_spotify_processor.py  feature_engineer.py  research_data_restructurer.py  spotify_collector.py
src/evaluation/: __init__.py  recommendation_evaluator.py  reproducibility.py  research_statistics.py  statistical_tests.py  statistical_validation.py
src/models/: __init__.py  advanced_bridge_detector.py  context_aware_recommender.py  model_manager.py  recommendation_engine.py  temporal_prediction_model.py
src/utils/: __init__.py  data_validator.py  research_data_loader.py
tests/: __init__.py  conftest.py  research_validator.py  test_core_research.py
